--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(DAWork2)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(DAWork2 Source/main.cpp)
+add_executable(DAWork2 Source/main.cpp Source/Reader.cpp Source/Reader.h Source/Travels.cpp Source/Travels.h Source/Manager.cpp Source/Manager.h)
