--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(DAWork2)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(DAWork2 Source/main.cpp Source/Reader.cpp Source/Reader.h Source/Travels.cpp Source/Travels.h Source/Manager.cpp Source/Manager.h)
+add_executable(DAWork2 Source/main.cpp Source/Reader.cpp Source/Reader.h Source/Travel.cpp
+        Source/Travel.h Source/Manager.cpp Source/Manager.h Source/Spots.cpp Source/Spots.h)
